fix ECM-2171: IE6: Error in display File Explorer portlet when the scrollbar appears

--- a/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
+++ b/portlet/ecm/src/main/webapp/skin/webui/component/explorer/UIJCRExplorer/VistaStylesheet.css
@@ -15,6 +15,10 @@
 	padding: 10px;
 }
 
+.UIJCRExplorerPortlet .UIJCRExplorer .UIDocumentWorkspace .UITabPane {
+	height: auto;
+}
+
 .UIJCRExplorerPortlet .WorkingAreaWithHelp .UIFormWithTitle {
 	width: auto;
 	padding: 10px;
@@ -52,8 +56,20 @@
 	margin-top: 3px;
 }
 
+.UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea {
+	width: 100%;
+} 
+
 .UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea .UIResizableBlock {
 	width: 97%;
+}
+
+.UIJCRExplorerPortlet .UIWorkingArea .UIPageIterator {
+	width: 90%;
+}
+
+.UIJCRExplorerPortlet .UIWorkingArea .UIPageIterator .PageIteratorContainer {
+	float: none;
 }
 
 .UIJCRExplorerPortlet .UIJCRExplorer .UIWorkingArea .UIContextMenuContainer {
